add cluster module

--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "sdk:dev": "concurrently --kill-others \"npm run rollup:watch\" \"npm run server\""
   },
   "dependencies": {
+    "@babel/runtime": "^7.6.3",
     "babel-polyfill": "^6.26.0",
     "babel-standalone": "^6.26.0",
-    "express": "^5.0.0-alpha.7",
-    "formidable": "^1.2.1",
-    "log4js": "^3.0.5",
-    "spdy": "^4.0.0",
-    "@babel/runtime": "^7.6.3",
     "chalk": "2.3.0",
     "concurrently": "^3.5.1",
     "cross-env": "^6.0.3",
+    "express": "^5.0.0-alpha.7",
+    "formidable": "^1.2.1",
+    "log4js": "^3.0.5",
+    "mongoose": "^5.9.7",
     "ora": "1.3.0",
-    "rimraf": "2.6.2"
+    "rimraf": "2.6.2",
+    "spdy": "^4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
